@@ -5,6 +5,17 @@
     * Add docs for Net::SSLeay::X509_VERIFY_PARAM class.
     * Add docs for Net::SSLeay::X509_STORE_CTX class.
     * Add docs for Net::SSLeay::X509_STORE class.
+  [Incompatible Changes]
+    * Fix the return type of Net::SSLeay::SSL_CTX#set_verify method.
+      
+      [Before]
+      method set_verify : int ($mode : int);
+      
+      [After]
+      method set_verify : void ($mode : int);
+    
+    * Net::SSLeay::SSL_CTX does not throw system errors.
+      
 0.006 2024-11-05
   [Requirement Changes]
     * Require SPVM 0.990028.
